# mjolnur

./: .gitignore  pyproject.toml
data/: cams.py  dataloader.py
mjolnur/config/: data_cache_config.yaml  exp1_decoded.yaml
mjolnur/data/: cams.py
mjolnur/scripts/: run_graphcast_and_cache.py
mjolnur/training/: run_smoke_epoch.py
mjolnur/utils/: config.py  graphcast_adapter.py  graphcast_utils.py  graphcast_utils_example.py
models/: advection.py  sidecar.py
scripts/: cams_to_zarr.py
training/: run_smoke_epoch.py  trainer.py
